force-app/main/default/objects/TMOS_Error_Log__c/TMOS_Error_Log__c.object-meta.xml
<CustomObject>
    <label>TMOS Error Log</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>TMOS Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMOS Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>