force-app/main/default/objects/TMOS_Error_Log__c/fields/Apex_Transaction_Limits__c.field-meta.xml
<CustomField>
    <fullName>Apex_Transaction_Limits__c</fullName>
    <label>Apex Transaction Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>