force-app/main/default/objects/TMOS_Error_Log__c/fields/API_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>API_Request_Body__c</fullName>
    <label>API Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>