force-app/main/default/objects/TMOS_Error_Log__c/fields/API_Response_body__c.field-meta.xml
<CustomField>
    <fullName>API_Response_body__c</fullName>
    <label>API Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>