force-app/main/default/objects/TMOS_Error_Log__c/fields/Batch_sObject_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_sObject_ID__c</fullName>
    <label>Batch sObject ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>