force-app/main/default/objects/TMOS_Error_Log__c/fields/Batch_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Start_Date_Time__c</fullName>
    <label>Batch Start Date Time</label>
    <type>DateTime</type>
</CustomField>