force-app/main/default/objects/TMOS_Error_Log__c/fields/Exception_Category__c.field-meta.xml
<CustomField>
    <fullName>Exception_Category__c</fullName>
    <label>Exception Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Custom Code</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>System Limitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>