force-app/main/default/objects/TMOS_Error_Log__c/fields/Exception_created_by__c.field-meta.xml
<CustomField>
    <fullName>Exception_created_by__c</fullName>
    <label>Exception created by</label>
    <length>200</length>
    <type>Text</type>
</CustomField>