force-app/main/default/objects/TMOS_Error_Log__c/fields/Exception_created_by_user__c.field-meta.xml
<CustomField>
    <fullName>Exception_created_by_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception User Session</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TMOS_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>