force-app/main/default/objects/TMOS_Error_Log__c/fields/Exception_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Error_Message__c</fullName>
    <label>Exception Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>