force-app/main/default/objects/TMOS_Error_Log__c/fields/Exception_Line_No__c.field-meta.xml
<CustomField>
    <fullName>Exception_Line_No__c</fullName>
    <label>Exception Line No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>