force-app/main/default/objects/TMOS_Error_Log__c/fields/Exception_Source__c.field-meta.xml
<CustomField>
    <fullName>Exception_Source__c</fullName>
    <label>Exception Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Inbound API</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Outbound API</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Batch Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>