force-app/main/default/objects/TMOS_Error_Log__c/fields/Exception_Status__c.field-meta.xml
<CustomField>
    <fullName>Exception_Status__c</fullName>
    <label>Exception Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending for Action</fullName>
            </value>
            <value>
                <fullName>Ready for Reprocessing</fullName>
            </value>
            <value>
                <fullName>Expected Error</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Re-Opened</fullName>
            </value>
            <value>
                <fullName>Assign</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>