force-app/main/default/objects/TMOS_Error_Log__c/fields/IsSuccessful__c.field-meta.xml
<CustomField>
    <fullName>IsSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSuccessful</label>
    <type>Checkbox</type>
</CustomField>