force-app/main/default/objects/TMOS_Error_Log__c/fields/Previous_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Batch_Id__c</fullName>
    <label>Previous Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>