force-app/main/default/objects/TMOS_Error_Log__c/fields/Success_Records_In_Batch__c.field-meta.xml
<CustomField>
    <fullName>Success_Records_In_Batch__c</fullName>
    <label>Success Records In Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>